BUG: Table in Call Logs (IVR) is overflowed
https://trello.com/c/ebEshXVP

--- a/modules/ivr/api-bundle/src/main/resources/webapp/css/calllog.css
+++ b/modules/ivr/api-bundle/src/main/resources/webapp/css/calllog.css
@@ -202,6 +202,10 @@
     margin-bottom: 2px;
 }
 
+.overflowed {
+    overflow: auto;
+}
+
 .ui-jqgrid-bdiv {
     width: 100%;
 }
